Hard limit on hair particle simple children radius #68393

Closed
opened 2019-08-08 02:07:57 +02:00 by Finn Bear · 5 comments

System Information
Operating system: Linux-4.15.0-52-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 410.104

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449

Short description of error
There is a hard limit of 10m on the radius of hair particle children when this property should have no hard limit in order to scale with an arbitrary size scene (in the same way that the size of a cube should have no hard limit). A soft limit (only affects dragging to increase the value) is appropriate.
image.png

Exact steps for others to reproduce the error

  1. Create a hair particle system of type object in which the objects are 100m+ large
  2. Enable children
  3. Try to increase the radius of the children beyond 10m in order to space the children out a bit
**System Information** Operating system: Linux-4.15.0-52-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 410.104 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` **Short description of error** There is a hard limit of 10m on the radius of hair particle children when this property should have no hard limit in order to scale with an arbitrary size scene (in the same way that the size of a cube should have no hard limit). A soft limit (only affects dragging to increase the value) is appropriate. ![image.png](https://archive.blender.org/developer/F7653777/image.png) **Exact steps for others to reproduce the error** 1) Create a hair particle system of type object in which the objects are 100m+ large 2) Enable children 3) Try to increase the radius of the children beyond 10m in order to space the children out a bit
Author

Added subscriber: @finnb

Added subscriber: @finnb
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-08-08 12:16:51 +02:00
Member

Agree this limit could be lifted

Agree this limit could be lifted

This issue was referenced by 5ca3bc7a14

This issue was referenced by 5ca3bc7a145f8ac1740cbf46e4701fee3a245b14
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#68393
No description provided.