Fix T68393: lift hardcoded limit on particle children 'child_radius'

Reviewers: jacqueslucke

Maniphest Tasks: T68393

Differential Revision: https://developer.blender.org/D5436